# MusicPlayerLinux

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  MusicPlayerLinux.pro  README.md  loggerdevice.cpp  loggerdevice.h  main.cpp  mainapplication.cpp  mainapplication.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpl_abstractstate.cpp  mpl_abstractstate.h  mpl_bassdevice.cpp  mpl_bassdevice.h  mpl_stateidle.cpp  mpl_stateidle.h  mpl_statepaused.cpp  mpl_statepaused.h  mpl_stateplayback.cpp  mpl_stateplayback.h  mplcore.cpp  mplcore.h  object_script.MusicPlayerLinux.Debug  object_script.MusicPlayerLinux.Release  playlistmodel.cpp  playlistmodel.h  qplaylist.cpp  qplaylist.h  qseekslider.cpp  qseekslider.h  tagextractor.cpp  tagextractor.h  ui_mainwindow.h
core/: bassplayer.cpp  bassplayer.h  core.cpp  core.h  iplayer.cpp  iplayer.h  iplayerobserver.cpp  iplayerstate.cpp  iplayerstate.h  stateidle.cpp  stateidle.h  statepaused.cpp  statepaused.h  stateplayback.cpp  stateplayback.h
debug/: moc_loggerdevice.cpp  moc_mainapplication.cpp  moc_mainwindow.cpp
release/: moc_loggerdevice.cpp  moc_mainapplication.cpp  moc_mainwindow.cpp
src/: loggerdevice.cpp  loggerdevice.h  main.cpp  mainwindow.ui  playlistmodel.cpp  playlistmodel.h  qseekslider.h  qvolumeslider.cpp  qvolumeslider.h
src/core/: core.cpp  core.h  iplayerobserver.h  iplayerstate.h  stateidle.cpp  statepaused.cpp
